--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - travis encrypt TOKEN_NPM --add deploy.api_key
+  - gem install travis
+  - travis encrypt $NPM_API_KEY --add deploy.api_key
 
 script:
   - npm test
@@ -28,7 +29,6 @@ script:
 deploy:
   provider: npm
   email: $NPM_EMAIL
-  api_key: $NPM_API_KEY
   on:
     tags: true
 
