--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
   - gem install travis
+  - travis login --org
   - travis encrypt $NPM_API_KEY --add deploy.api_key
 
 script:
