--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
   - gem install travis
+  - travis settings maximum_number_of_builds --set 1
   - travis login --github-token $NPM_API_KEY
   - travis encrypt $NPM_API_KEY --add deploy.api_key
 
